--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: MSwM
 Type: Package
 Title: Fitting Markov Switching Models
-Version: 1.0
-Date: 2013-11-13
+Version: 1.01
+Date: 2013-02-05
 Author: Josep A. Sanchez-Espigares, Alberto Lopez-Moreno
 Maintainer: Josep A. Sanchez-Espigares <josep.a.sanchez@upc.edu>
 Description: Univariate Autoregressive Markov Switching Models for
         Linear and Generalized Models
 License: GPL (>= 2.0)
-Depends: methods, nlme, graphics, snowfall
-Packaged: 2013-01-04 14:36:22 UTC; josepa
+Depends: methods, nlme, graphics, parallel
+Packaged: 2013-02-05 11:26:49 UTC; josepa
 Repository: CRAN
-Date/Publication: 2013-01-04 16:48:10
+Date/Publication: 2013-02-05 12:45:51
